# eod_django_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/v1/: __init__.py  apps.py  urls.py
api/v1/do_something_1/: __init__.py  do_something_1_interactor.py  do_something_1_view.py
core/: settings.py  urls.py
core/root_endpoints/: __init__.py  apps.py
core/settings/: __init__.py  databases.py  django_settings_module.py  installed_apps.py  rest_framework.py  time_zone.py  wsgi_application.py
dbmodels/: apps.py
dbmodels/migrations/: 0001_create_model_account.py  0001_initial.py  0002_alter_unique_together_for_account.py
dbmodels/models/: __init__.py  account.py  unique_token.py
entities/selectors/: get_something_1_selector.py
entities/services/: do_something_1_service.py  do_something_1_service_test.py  do_something_2_service.py  do_something_2_service_test.py  do_something_3_service_test.py
entities/use_cases/: do_something_1_use_case.py  do_something_1_use_case_test.py  do_something_2_use_case.py  do_something_2_use_case_test.py  do_something_3_use_case.py  do_something_3_use_case_test.py
entities/utilities/: injector_test.py
repos/: get_something_1_repo.py
services/: do_something_1_service_test.py  do_something_2_service_test.py  do_something_3_service.py  do_something_3_service_test.py
use_cases/: do_something_1_use_case.py  do_something_1_use_case_test.py  do_something_2_use_case.py  do_something_2_use_case_test.py  do_something_3_use_case.py  do_something_3_use_case_test.py
(+21 files in other folders)
